# tale

./: .coverage  .coverage.Averys-MacBook-Pro.local.82401.XtTghXGx  .coverage.Averys-MacBook-Pro.local.82402.XDfPwHkx  .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  archived-roadmap-log1.md  audit-report.json  chat_history_02a7ba1d.json  chat_history_0db2ed47.json  chat_history_171586d3.json  chat_history_27d5f1ae.json  chat_history_3f4b9337.json  chat_history_417c84ad.json  chat_history_70272705.json  chat_history_70e14f56.json  chat_history_7bb951ab.json  chat_history_82465d13.json  chat_history_adfa9d36.json  chat_history_b57372ac.json  chat_history_f4ebaa68.json  claude-local.md  claude-project.md  codebase-audit-2025-7-8.md  demo_chat.py  demo_http_migration.py  demo_validation.py  demo_validation_fixed.py  document_model_performance.py  implementation-guide.md  migration-analysis.md  phase1-architecture-recon.md  phase2-code-quality-forensics.md  phase3-performance-security-audit.md  phase4-testing-documentation-audit.md  pinning-rationale.md  polling_usage.txt  (+15 more)
.github/workflows/: ci.yml  test.yml
.serena/: project.yml
.serena/memories/: architecture.md  code_style.md  completion_checklist.md  project_overview.md  suggested_commands.md  tech_stack.md
.tale/: config.json
docs/: README.md  development-setup.md  git-hooks.md  problems.md  quality-audit-2025-07-10.md  quality-standards.md  roadmap-p1-2.md  roadmap-p2-6.md  roadmap-p2-7.md
docs/dev-reference/: # Model Context Protocol (MCP) Implement.md  development-setup.md
docs/development/: development-setup.md  requirements-dev.txt
scripts/: benchmark.sh  clean.sh  format.sh  lint.sh  setup-dev.sh  setup-hooks.sh  test-runner.sh  test.sh
src/: __init__.py  constants.py  exceptions.py  validation.py
src/cli/: main.py
src/mcp/: base_server.py  http_client.py  http_server.py
src/models/: model_pool.py  ollama_client.py  simple_client.py
src/orchestration/: coordinator_http.py
src/servers/: __init__.py  claude_code_server.py  execution_server_http.py  gateway_server_http.py  ux_agent_server.py
src/storage/: checkpoint.py  database.py  task_store.py
src/tale/: constants.py  exceptions.py  validation.py
src/tale/cli/: __init__.py  main.py
src/tale/mcp/: __init__.py  base_server.py  http_client.py  http_server.py
src/tale/memory/: __init__.py
src/tale/models/: __init__.py  model_pool.py  ollama_client.py  simple_client.py
src/tale/orchestration/: __init__.py  coordinator.py  coordinator_http.py
src/tale/servers/: __init__.py  claude_code_server.py  execution_server.py  execution_server_http.py  gateway_server.py  gateway_server_http.py  ux_agent_server.py
src/tale/storage/: __init__.py  checkpoint.py  database.py  schema.py  task_store.py
src/tale/tui/: __init__.py
src/tale/utils/: __init__.py
test_area/: debug_server.py  test_polling.py
test_area/.tale/: config.json
tests/: __init__.py  conftest.py  test_acceptance_criteria.py  test_base_server.py  test_basic_integration.py  test_checkpoint.py  test_cli_integration.py  test_complete_end_to_end_flow.py  test_constants.py  test_database.py  test_development_setup.py  test_dual_model_integration.py  test_example.py  test_exceptions.py  test_execution_server.py  test_gateway.py  test_gateway_integration.py  test_http_mcp_integration.py  test_http_server_lifecycle.py  test_http_task_flow.py  test_model_pool.py  test_ollama_client.py  test_orchestration.py  test_orchestration_integration.py  test_schema.py  test_simple_client.py  test_system_integration.py  test_task_store.py  test_ux_agent_server.py  test_validation.py
tests/e2e/: test_complete_end_to_end_flow.py
tests/integration/: test_cli_integration.py  test_dual_model_integration.py  test_gateway_integration.py  test_http_mcp_integration.py  test_http_server_lifecycle.py  test_http_task_flow.py  test_orchestration_integration.py
tests/unit/: test_base_server.py  test_checkpoint.py  test_constants.py  test_database.py  test_exceptions.py  test_model_pool.py  test_ollama_client.py  test_schema.py  test_task_store.py  test_ux_agent_server.py  test_validation.py
